--- a/scripts/rmd/neoadjuvant.Rmd
+++ b/scripts/rmd/neoadjuvant.Rmd
@@ -16,17 +16,18 @@ require(gridExtra)
 require(reshape2)
 require(knitr)
 require(rmarkdown)
-first_run <- FALSE
+first_run <- TRUE
 verbose=FALSE
 r <- function(){render('~/Documents/emj/ImmunoseqResults/immunoSeqR/scripts/rmd/neoadjuvant.Rmd',
 output_file='~/Documents/emj/ImmunoseqResults/new/neoadjuvant.pdf',
 intermediates_dir='~/Documents/emj/ImmunoseqResults/new/')}
 ```
 ```{r eval=first_run}
-ds <- readRDS('~/Documents/emj/ImmunoseqResults/mega/ds_agg_Neoadjuvant.Rds')
+#ds <- readRDS('~/Documents/emj/ImmunoseqResults/mega/ds_agg_Neoadjuvant.Rds')
 dict <- readRDS('~/Documents/emj/ImmunoseqResults/mega/dict_Neoadjuvant.Rds')
 stats <- readRDS('~/Documents/emj/ImmunoseqResults/mega/stats_Neoadjuvant.Rds')
 load('~/Documents/emj/ImmunoseqResults/mega/olm_Neoadjuvant.Rda')
+load('~/Documents/emj/ImmunoseqResults/mega/sum.ds_neoadjuvant.Rda')
 ```
 
 ## Background
@@ -34,11 +35,11 @@ load('~/Documents/emj/ImmunoseqResults/mega/olm_Neoadjuvant.Rda')
 
 ### Dataset
 
-The data set contains `r ncol(ds)-2` samples, of `r length(levels(dict$type))` types. 
-There are `r format(nrow(ds),big.mark=',')` unique TCRs, collapsed from `r 
-format(sum(ds$syn),big.mark=',')` distinct productive CDR3 sequences. This represents an average 
-synonymity of `r summary(ds$syn)['Mean']`. The maximum synonymity (in the parent data set) was `r 
-summary(ds$syn)['Max.']` (clone sequence `r ds$aa[which.max(ds$syn)]`).\par
+The data set contains `r sum.ds$nsamp` samples, of `r  sum.ds$ntypes` types. 
+There are `r  format(sum.ds$unique.tcr,big.mark=',')` unique TCRs, collapsed from `r  
+format(sum.ds$total.tcr,big.mark=',')` distinct productive CDR3 sequences. This represents an 
+average synonymity of `r  round(sum.ds$avg.syn,3)`. The maximum synonymity (in the parent data 
+set) was `r sum.ds$max.syn` (clone sequence `r sum.ds$max.syn.aa `).\par
 
 ### Metadata  
 The available metadata fields in the dictionary are: `r paste(names(dict)[-1],collapse=', ')`. The statistics computed are `r paste(names(stats)[names(stats)!='fn'],collapse=', ')`.
@@ -53,7 +54,7 @@ The available metadata fields in the dictionary are: `r paste(names(dict)[-1],co
 stats <- stats[,c(1,3,2,4)]
 plot_ds <- merge(dict,stats)
 ```
-```{r echo=verbose,fig.align='center'}
+```{r by_response,echo=verbose,fig.align='center'}
 x_val <- 'response'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -68,7 +69,7 @@ for(b in metrics){
 \clearpage
 
 ### By Type
-```{r echo=verbose,fig.align='center'}
+```{r by_type,echo=verbose,fig.align='center'}
 metrics <- names(stats[names(stats)!='fn'])
 l <- vector('list')
 for(b in metrics){
@@ -101,13 +102,13 @@ g
 
 
 ## Expanded Clones
-```{r, expanded_clones,echo=verbose,eval=FALSE}
+```{r expanded_clones,echo=verbose,eval=FALSE}
 #rm(ds)
-ds_nt <- readRDS('~/Documents/emj/ImmunoseqResults/mega/fixed/ds_Neoadjuvant_fixed.Rds')
+#ds_nt <- readRDS('~/Documents/emj/ImmunoseqResults/mega/fixed/ds_Neoadjuvant_fixed.Rds')
 ```
 ```{r calc_exp_cl,echo=verbose,cache=TRUE}
 #out <- iseqr_exp_cl(ds_nt,dict)
-#source('~/Documents/emj/ImmunoseqResults/immunoSeqR/scripts/exp_cl.R')
+#out <- readRDS('~/Documents/emj/ImmunoseqResults/mega/fixed/exp_cl_out_nadj.Rds')
 ```
 ```{r exp_cl_plot, echo=verbose,fig.align='center',fig.height=3,fig.width=5}
 resp <- sapply(names(out$num_exp),FUN=iseqr_lookup,dict=dict)
@@ -120,7 +121,10 @@ f <- f + ylab('Number of Expanded Clones')
 grid.arrange(g,f,ncol=2)
 
 ```
-```{r exp_cl_vs_Tumor, echo=verbose}
+
+\clearpage
+
+```{r exp_cl_vs_Tumor, echo=verbose,fig.align='center',fig.height=36,fig.width=8}
 mats <- out$total
 patients <- names(mats)
 resp <- sapply(patients,FUN=iseqr_lookup,dict=dict)
@@ -135,40 +139,53 @@ layout[,2] <- seq(r)+nr
 
 plots <- list()
 for(a in seq_along(mats)){
-	tds <- as.data.frame(mats[[a]])
-	w <- which(dict$patient==patients[a] & dict$type=='PDAC')
-	tds[,4] <- ds_nt[,w]		
-	names(tds)[4] <- 'PDAC'
-	#calculate the lfc
-	ttds <- tds
-	ttds[ttds[,1]==0,1] <- 1
-	ttds[ttds[,2]==0,2] <- 1
-	tds$lfc <- log(ttds[,2]/ttds[,1],2)
-	rm(ttds)
-	#
-	lowest <- min(tds$p_adj[tds$p_adj>0]) # lowest non-0 p-val
-	tds$p_adj[tds$p_adj==0] <- lowest # clip any p=0 to next lowest
-	tds <- tds[which(tds$PDAC>0),] # restrict to tumor
-	l <- max(abs(-log(tds$p_adj,10))) # plot limit
-	sh <- shared(tds$PDAC,rowSums(tds[,c(1,2)]))
-	plots[[a]] <- ggplot(tds,aes(x=-log(p_adj,10),y=PDAC,color=lfc)) + 
-		geom_point() + theme_bw()+
-		ylab('Tumor Counts') + 
-		xlab('-log(p)') + 
-		ggtitle(paste0(patients[a],'(',resp[a],')',' ',sh,' ','shared')) +
-		scale_colour_gradient2(low='red',mid='black',high='green',midpoint=0)+
-		scale_x_continuous(limits=c(0,l))
+    tds <- as.data.frame(mats[[a]])
+    w <- which(dict$patient==patients[a] & dict$type=='PDAC')
+    tds[,4] <- ds_nt[,w]
+    names(tds)[4] <- 'PDAC'
+    #calculate the lfc
+    ttds <- tds
+    ttds[ttds[,1]==0,1] <- 1
+    ttds[ttds[,2]==0,2] <- 1
+    tds$lfc <- log(ttds[,2]/ttds[,1],2)
+    rm(ttds)
+    #
+    lowest <- min(tds$p_adj[tds$p_adj>0]) # lowest non-0 p-val
+    tds$p_adj[tds$p_adj==0] <- lowest # clip any p=0 to next lowest
+    tds <- tds[which(tds$PDAC>0),] # restrict to tumor
+    suppressWarnings(
+        l <- max(abs(-log(tds$p_adj,10))) # plot limit
+    )
+    if(l<1.3){l <- 1.3} # minimum of -log(0.05,10)
+    sh <- shared(tds$PDAC,rowSums(tds[,c(1,2)]))
+    if(nrow(tds)>0){
+        plots[[a]] <- ggplot(tds,aes(x=-log(p_adj,10),y=PDAC,color=lfc)) +
+            geom_point() + theme_bw()+
+            ylab('Tumor Counts') +
+            xlab('-log(p)') +
+            ggtitle(paste0(patients[a],'(',resp[a],')',' ',sh,' ','shared')) +
+            scale_colour_gradient2(low='red',mid='black',high='green',midpoint=0)+
+            scale_x_continuous(limits=c(0,l))
+    }else{
+            plots[[a]] <- suppressWarnings(ggplot() + geom_blank()+
+                            ggtitle(paste0(patients[a],'(',resp[a],')',' ',sh,' ','shared'))
+                        )
+    }
 }
+
 g <- grid.arrange(grobs=plots,layout_matrix=layout)
-g
-#ggsave(g,file='~/Desktop/test_fixed.pdf',height=20)
+
+
+
+#ggsave(g,file='~/Desktop/test_fixed_nadj.pdf',height=2*nrow(layout),width=8)
 ```
 
 \clearpage
+
 ## Confounders
 
 ### Treatment Arm
-```{r echo=verbose}
+```{r by_arm,echo=verbose}
 a <- matrix(c('Arm A:','GVAX','Arm B:','GVAX + IV Cyclophosphamide','Arm C:','GVAX + Oral Cyclophosphamide'),ncol=2,byrow=2)
 kable(a) 
 ```
@@ -188,7 +205,7 @@ for(b in metrics){
 
 ### Age
 
-```{r echo=verbose,cache=FALSE,fig.align='center',fig.height=2.5}
+```{r by_age,echo=verbose,cache=FALSE,fig.align='center',fig.height=2.5}
 x_val <- 'age'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -205,7 +222,7 @@ for(b in metrics){
 
 ### Cell Number
 
-```{r echo=verbose,cache=FALSE,fig.align='center',fig.height=2.5,fig.width=8}
+```{r by_cell_num,echo=verbose,cache=FALSE,fig.align='center',fig.height=2.5,fig.width=8}
 x_val <- 'cells'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
