--- a/scripts/rmd/sbrt.Rmd
+++ b/scripts/rmd/sbrt.Rmd
@@ -10,6 +10,7 @@ header-includes:
 Created `r  format(Sys.Date(),"%m/%d/%y")`
 
 ```{r eval=TRUE,echo=FALSE}
+require(rmarkdown)
 require(immunoSeqR)
 require(ggplot2)
 require(gridExtra)
@@ -22,7 +23,8 @@ output_file='~/Documents/emj/ImmunoseqResults/new/sbrt.pdf')}
 
 ```
 ```{r eval=first_run}
-ds <- readRDS('~/Documents/emj/ImmunoseqResults/mega/ds_agg_SBRT.Rds')
+#ds <- readRDS('~/Documents/emj/ImmunoseqResults/mega/ds_agg_SBRT.Rds')
+load('~/Documents/emj/ImmunoseqResults/mega/sum.ds_sbrt.Rda')
 dict <- readRDS('~/Documents/emj/ImmunoseqResults/mega/dict_sbrt.Rds')
 stats <- readRDS('~/Documents/emj/ImmunoseqResults/mega/stats_SBRT.Rds')
 load('~/Documents/emj/ImmunoseqResults/mega/olm_SBRT.Rda')
@@ -33,11 +35,11 @@ load('~/Documents/emj/ImmunoseqResults/mega/olm_SBRT.Rda')
 
 ### Dataset
 
-The data set contains `r ncol(ds)-2` samples, of `r length(levels(dict$type))` types. 
-There are `r format(nrow(ds),big.mark=',')` unique TCRs, collapsed from `r 
-format(sum(ds$syn),big.mark=',')` distinct productive CDR3 sequences. This represents an average 
-synonymity of `r summary(ds$syn)['Mean']`. The maximum synonymity (in the parent data set) was `r 
-summary(ds$syn)['Max.']` (clone sequence `r ds$aa[which.max(ds$syn)]`).\par
+The data set contains `r sum.ds$nsamp` samples, of `r  sum.ds$ntypes` types.
+There are `r  sum.ds$unique.tcr` unique TCRs, collapsed from `r  sum.ds$total.tcr` distinct
+productive CDR3 sequences. This represents an average synonymity of `r  sum.ds$avg.syn`.
+The maximum synonymity (in the parent data set) was `r  sum.ds$max.syn` (clone sequence `r
+sum.ds$max.syn.aa `).\par
 
 ### Metadata  
 The available metadata fields in the dictionary are: `r paste(names(dict)[-1],collapse=', ')`. The statistics computed are `r paste(names(stats)[names(stats)!='fn'],collapse=', ')`.
@@ -121,7 +123,7 @@ stats <- stats[,c(1,3,2,4)]
 plot_ds <- merge(dict,stats)
 
 ```
-```{r echo=verbose,fig.align='center'}
+```{r by_type,echo=verbose,fig.align='center'}
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
 l <- vector('list')
@@ -142,7 +144,7 @@ for(a in metrics){
 \clearpage
 
 ### By Treatment Arm
-```{r echo=verbose,fig.align='center'}
+```{r by_arm,echo=verbose,fig.align='center'}
 x_val <- 'arm'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -157,7 +159,7 @@ for(b in metrics){
 \clearpage
 
 ### By Overall Survival
-```{r echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
+```{r by_survival,echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
 x_val <- 'os'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -173,7 +175,7 @@ for(b in metrics){
 ```
 
 ### By Survival Tertile
-```{r echo=verbose,fig.align='center'}
+```{r by_survival_tert,echo=verbose,fig.align='center'}
 x_val <- 'os.tert'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -189,7 +191,7 @@ for(b in metrics){
 \clearpage
 
 ###By PTV80
-```{r echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
+```{r by_ptv80,echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
 x_val <- 'ptv80'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -204,7 +206,7 @@ for(b in metrics){
 }
 ```
 ### By PTV80 Tertile
-```{r echo=verbose,fig.align='center'}
+```{r by_ptv80_tert,echo=verbose,fig.align='center'}
 x_val <- 'ptv80.tert'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -223,7 +225,7 @@ for(b in metrics){
 
 ### Cell Number
 
-```{r echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
+```{r by_number,echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
 x_val <- 'cells'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
@@ -239,7 +241,7 @@ for(b in metrics){
 ```
 
 ### Age
-```{r echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
+```{r by_age,echo=verbose,cache=FALSE,fig.align='center',fig.height=3,fig.width=8}
 x_val <- 'age'
 metrics <- names(stats[names(stats)!='fn'])
 types <- levels(plot_ds$type)
