--- a/scripts/rmd/adjuvant.Rmd
+++ b/scripts/rmd/adjuvant.Rmd
@@ -24,11 +24,10 @@ verbose=FALSE
 
 ```
 ```{r eval=first_run}
-#ds <- readRDS('~/Documents/emj/ImmunoseqResults/mega/ds_agg_Adjuvant.Rds')
-load('~/Documents/emj/ImmunoseqResults/mega/sum.ds_adjuvant.Rda')
-dict <- readRDS('~/Documents/emj/ImmunoseqResults/mega/dict_Adjuvant.Rds')
-stats <- readRDS('~/Documents/emj/ImmunoseqResults/mega/stats_Adjuvant.Rds')
-load('~/Documents/emj/ImmunoseqResults/mega/olm_Adjuvant.Rda')
+load('~/Documents/emj/ImmunoseqResults/data/adjuvant/sum.ds.Rda')
+dict <- readRDS('~/Documents/emj/ImmunoseqResults/data/adjuvant/dict.Rds')
+stats <- readRDS('~/Documents/emj/ImmunoseqResults/data/adjuvant/stats.Rds')
+load('~/Documents/emj/ImmunoseqResults/data/adjuvant/olm.Rda')
 ```
 ## Background
 \includegraphics[width=\textwidth]{/home/ahopkins/Documents/emj/figures/J9988_timeline.pdf}
