--- a/scripts/rmd/baseline.Rmd
+++ b/scripts/rmd/baseline.Rmd
@@ -24,11 +24,11 @@ output_file='~/Documents/emj/ImmunoseqResults/new/baseline.pdf',
 intermediates_dir='~/Documents/emj/ImmunoseqResults/new/')}
 ```
 ```{r eval=first_run}
-#ds <- readRDS('~/Documents/emj/ImmunoseqResults/mega/ds_agg_Neoadjuvant.Rds')
-dict <- readRDS('~/Documents/emj/ImmunoseqResults/mega/dict_Neoadjuvant.Rds')
-stats <- readRDS('~/Documents/emj/ImmunoseqResults/mega/stats_Neoadjuvant.Rds')
-load('~/Documents/emj/ImmunoseqResults/mega/olm_Neoadjuvant.Rda')
-load('~/Documents/emj/ImmunoseqResults/mega/sum.ds_neoadjuvant.Rda')
+ds <- readRDS('~/Documents/emj/ImmunoseqResults/data/baseline/ds_agg.Rds')
+dict <- readRDS('~/Documents/emj/ImmunoseqResults/data/baseline/dict.Rds')
+stats <- readRDS('~/Documents/emj/ImmunoseqResults/data/baseline/stats.Rds')
+load('~/Documents/emj/ImmunoseqResults/data/baseline/olm.Rda')
+load('~/Documents/emj/ImmunoseqResults/data/baseline/sum.ds.Rda')
 ```
 
 ## Background
