--- a/scripts/rmd/ipi.Rmd
+++ b/scripts/rmd/ipi.Rmd
@@ -25,6 +25,7 @@ intermediates_dir='~/Documents/emj/ImmunoseqResults/new/')}
 ```{r eval=first_run}
 dict <- readRDS('~/Documents/emj/ImmunoseqResults/data/ipi/dict.Rds')
 stats <- readRDS('~/Documents/emj/ImmunoseqResults/data/ipi/stats.Rds')
+plot_ds <- readRDS('~/Documents/emj/ImmunoseqResults/data/ipi/plot_ds.Rds')
 load('~/Documents/emj/ImmunoseqResults/data/ipi/olm.Rda')
 load('~/Documents/emj/ImmunoseqResults/data/ipi/sum.ds.Rda')
 ```
@@ -48,11 +49,7 @@ The available metadata fields in the dictionary are: `r paste(names(dict)[-1],co
 
 ### By Response
 
-```{r eval=TRUE,echo=verbose,cache=FALSE}
-#put sum of seqs at the end
-stats <- stats[,c(1,3,2,4)]
-plot_ds <- merge(dict,stats)
-```
+
 ```{r by_response,echo=verbose,fig.align='center'}
 x_val <- 'response'
 metrics <- names(stats[names(stats)!='fn'])
@@ -65,6 +62,24 @@ for(b in metrics){
 	do.call(grid.arrange,c(l,ncol=length(types)))
 }
 ```
+\clearpage
+
+## Change In Metrics
+```{r delta_metrics,eval=TRUE,echo=verbose}
+w <- grep('Log',names(plot_ds))
+l <- vector('list')
+m <- vector('list')
+for(a in seq(length(w))){
+  l[[a]] <- iseqr_plot_factor(plot_ds,names(plot_ds)[w[a]],'response','POST1') +
+                              geom_hline(yintercept=0,alpha=0.1) + ggtitle('PRE to POST1')
+  m[[a]] <- iseqr_plot_factor(plot_ds,names(plot_ds)[w[a]],'response','POST3') +
+                              geom_hline(yintercept=0,alpha=0.1) + ggtitle('PRE to POST3')
+}
+do.call(grid.arrange,c(l,ncol=length(w)))
+cat('\n\n')
+do.call(grid.arrange,c(m,ncol=length(w)))
+```
+
 \clearpage
 
 #By Adverse Event Status
@@ -83,6 +98,25 @@ for(b in metrics){
   do.call(grid.arrange,c(l,ncol=length(types)))
 }
 ```
+
+\clearpage
+
+## Change In Metrics
+```{r delta_metrics_ae,eval=TRUE,echo=verbose,}
+w <- grep('Log',names(plot_ds))
+l <- vector('list')
+m <- vector('list')
+for(a in seq(length(w))){
+  l[[a]] <- iseqr_plot_factor(plot_ds,names(plot_ds)[w[a]],'nonskin.irae','POST1') +
+                              geom_hline(yintercept=0,alpha=0.1) + ggtitle('PRE to POST1')
+  m[[a]] <- iseqr_plot_factor(plot_ds,names(plot_ds)[w[a]],'nonskin.irae','POST3') +
+                              geom_hline(yintercept=0,alpha=0.1) + ggtitle('PRE to POST3')
+}
+do.call(grid.arrange,c(l,ncol=length(w)))
+cat('\n\n')
+do.call(grid.arrange,c(m,ncol=length(w)))
+```
+
 
 \clearpage
 
@@ -122,6 +156,21 @@ for(b in metrics){
 ```
 \clearpage
 
+## Change In Metrics
+```{r delta_metrics_arm,eval=TRUE,echo=verbose,}
+w <- grep('Log',names(plot_ds))
+l <- vector('list')
+m <- vector('list')
+for(a in seq(length(w))){
+  l[[a]] <- iseqr_plot_factor(plot_ds,names(plot_ds)[w[a]],'arm','POST1') +
+                              geom_hline(yintercept=0,alpha=0.1) + ggtitle('PRE to POST1')
+  m[[a]] <- iseqr_plot_factor(plot_ds,names(plot_ds)[w[a]],'arm','POST3') +
+                              geom_hline(yintercept=0,alpha=0.1) + ggtitle('PRE to POST3')
+}
+do.call(grid.arrange,c(l,ncol=length(w)))
+cat('\n\n')
+do.call(grid.arrange,c(m,ncol=length(w)))
+```
 
 
 
@@ -147,23 +196,19 @@ g
 
 
 ## Expanded Clones
-```{r expanded_clones,echo=verbose,eval=FALSE}
-#rm(ds)
-#ds_nt <- readRDS('~/Documents/emj/ImmunoseqResults/ipi/fixed/ds_ipi_fixed.Rds')
-```
-```{r calc_exp_cl,echo=verbose,cache=TRUE}
-out <- iseqr_exp_cl(ds_nt,dict)
-#out <- readRDS('~/Documents/emj/ImmunoseqResults/ipi/fixed/exp_cl_out_nadj.Rds')
-```
-```{r exp_cl_plot, echo=verbose,fig.align='center',fig.height=3,fig.width=5}
-#resp <- sapply(names(out$num_exp),FUN=iseqr_lookup,dict=dict)
-#arm <- sapply(names(out$num_exp),FUN=iseqr_lookup,dict=dict,o_col='arm')
-#df <- data.frame(patient=names(out$num_exp),response=resp,arm=arm,num_exp=out$num_exp)
-#g <- iseqr_plot_factor(df,'num_exp','response',NA)
-#g <- g + ylab('Number of Expanded Clones')
-#f <- iseqr_plot_factor(df,'num_exp','arm',NA)
-#f <- f + ylab('Number of Expanded Clones')
-#grid.arrange(g,f,ncol=2)
+```{r exp_cl_plot, echo=verbose,fig.align='center',fig.height=4,fig.width=7}
+w <- grep('Number of Expanded',names(plot_ds))
+g <- iseqr_plot_factor(plot_ds,names(plot_ds)[w],'response',type='POST1') + xlab('Response')
+f <- iseqr_plot_factor(plot_ds,names(plot_ds)[w],'arm',type='POST1') + xlab('Arm')
+h <- iseqr_plot_factor(plot_ds,names(plot_ds)[w],'nonskin.irae',type='POST1') + xlab('AE')
+grid.arrange(g,f,h,ncol=3)
+
+w <- grep('Number of Expanded',names(plot_ds))
+g <- iseqr_plot_factor(plot_ds,names(plot_ds)[w],'response',type='POST3') + xlab('Response')
+f <- iseqr_plot_factor(plot_ds,names(plot_ds)[w],'arm',type='POST3') + xlab('Arm')
+h <- iseqr_plot_factor(plot_ds,names(plot_ds)[w],'nonskin.irae',type='POST3') + xlab('AE')
+grid.arrange(g,f,h,ncol=3)
+
 
 ```
 
@@ -188,19 +233,3 @@ for(b in metrics){
 ```
 \clearpage
 
-### Cell Number
-
-```{r by_cell_num,echo=verbose,cache=FALSE,fig.align='center',fig.height=2.5,fig.width=8}
-#x_val <- 'cells'
-#metrics <- names(stats[names(stats)!='fn'])
-#types <- levels(plot_ds$type)
-#for(b in metrics){
-#    l <- vector('list')
-#    for(a in types[types!='PDAC']){
-#        l[[a]] <- iseqr_plot_metrics(plot_ds[!is.na(plot_ds$cells),],b,x_val,a) + #
-#					theme(axis.text=element_text(size=5))
-#    }
-#    do.call(grid.arrange,c(l,ncol=length(types)))  #
-#	cat('  \n')
-#}
-```
